--- a/UI/package.json
+++ b/UI/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.7",
+    "lottie-react": "^2.4.0",
     "mic-recorder-to-mp3": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
